--- a/libs/control.v0.css
+++ b/libs/control.v0.css
@@ -5,18 +5,27 @@
 	background : grey;
 	position : absolute ;
 	bottom : 0;
-
 }
 
-#palette {
+#instructions {
 	background : black;
+	display : inline-block;
 }
 
-#control li {
+#control li , #execute {
 	display : inline-block;
-	background : white;
 	margin : 4px;
 	padding : 4px;
 	width : 100px;
 	height : 100px;
+	border-radius :4px;
+}
+
+#control li {
+	background : white;
+}
+
+#execute {
+	background : red;
+	color : white ;
 }
