a lil' better animation

--- a/libs/control.v0.css
+++ b/libs/control.v0.css
@@ -48,9 +48,10 @@
 	pointer-events : none ;
 }
 
-#control #palette {
+#control #palette , #control.editable #palette.nomore {
 	max-height : 0px;
 	pointer-events : none ;
+	overflow : hidden;
 }
 
 #control.editable button , #control.editable #palette {
