--- a/libs/playfield.v0.css
+++ b/libs/playfield.v0.css
@@ -1,5 +1,10 @@
 #playfield {
 	white-space : no-wrap;
+	margin : 0 auto;
+	position : relative;
+}
+
+#playfield p {
 }
 
 #playfield span {
@@ -8,4 +13,14 @@
 	height : 48px;
 	border : 1px solid blue;
 	vertical-align :middle;
+}
+
+#playfield b {
+	display : inline-block;
+	border : 4px solid black;
+	border-radius: 24px;
+	width : 40px;
+	height : 40px;
+	font-size: 30px;
+	text-align : center;
 }
