--- a/libs/control.v0.css
+++ b/libs/control.v0.css
@@ -44,7 +44,7 @@
 }
 
 #control button  {
-	opacity : 0;
+	color : grey;
 	pointer-events : none ;
 }
 
@@ -55,7 +55,6 @@
 }
 
 #control.editable button , #control.editable #palette {
-	opacity : 1;
 	pointer-events : auto;
 }
 
@@ -67,12 +66,13 @@
 	outline : 4px solid yellow;
 }
 
-#execute {
+#execute.enabled, #upload.enabled {
+	pointer-events : auto;
 	background : red;
 	color : white ;
 }
 
-#backspace {
+#control.editable #backspace {
 	background : yellow;
 	color : red;
 }
