--- a/libs/playfield.v0.css
+++ b/libs/playfield.v0.css
@@ -16,6 +16,9 @@
 }
 
 #playfield b {
+	position : absolute;
+	top : 0;
+	left : 0;
 	display : inline-block;
 	border : 4px solid black;
 	border-radius: 24px;
@@ -23,4 +26,12 @@
 	height : 40px;
 	font-size: 30px;
 	text-align : center;
+    transition-property : transform ;
+    -moz-transition-property: transform ;
+    -webkit-transition-property: transform ;
+    transition-duration: 1s;
+    -moz-transition-duration: 1s;
+    -webkit-transition-duration: 1s;
+
+	transform : translateX(100px) translateY(100px) rotate(90deg);
 }
